fix accesibility problems( color contrasts)

--- a/src/components/Menu/Desctop_menu.scss
+++ b/src/components/Menu/Desctop_menu.scss
@@ -18,14 +18,14 @@
 		font-size: 2.2rem;
 		padding: 0 1rem;
 		text-decoration: none;
-		color: $third-color;
+		color: $black;
 
 		&--active {
 			margin: 0 0.8rem;
 			font-size: 2.2rem;
 			padding: 0 1rem;
 			text-decoration: none;
-			color: $third-color;
+			color: $black;
 			border-bottom: 1px solid $white;
 		}
 	}
